--- a/sandbox.elemisthemes.com/demo1.html
+++ b/sandbox.elemisthemes.com/demo1.html
@@ -412,11 +412,11 @@
       <div class="container pt-10 pt-md-14 pb-8 text-center">
         <div class="row gx-lg-8 gx-xl-12 gy-10 align-items-center">
           <div class="col-lg-7">
-            <figure><img class="w-auto" src="https://github.com/Aeka-Rupa/Aeka-Rupa.github.io/blob/main/sandbox.elemisthemes.com/assets/img/illustrations/i2.png" srcset="./assets/img/illustrations/i2@2x.png 2x" alt="" /></figure>
+            <img class="w-auto" src="assets/img/illustrations/i2.png" />
           </div>
           <!-- /column -->
           <div class="col-md-10 offset-md-1 offset-lg-0 col-lg-5 text-center text-lg-start">
-            <h1 class="display-1 mb-5 mx-md-n5 mx-lg-0">Grow Your Business with Our Solutions.</h1>
+            <h1 class="display-1 mb-5 mx-md-n5 mx-lg-0">Aeka-Rupa.</h1>
             <p class="lead fs-lg mb-7">We help our clients to increase their website traffic, rankings and visibility in search results.</p>
             <span><a class="btn btn-primary rounded-pill me-2">Try It For Free</a></span>
           </div>
