--- a/sandbox.elemisthemes.com/demo1.html
+++ b/sandbox.elemisthemes.com/demo1.html
@@ -13,174 +13,33 @@
   <link rel="shortcut icon" href="assets/img/favicon.png">
   <link rel="stylesheet" href="assets/css/plugins.css">
   <link rel="stylesheet" href="assets/css/style.css">
-  <link rel="stylesheet" href="assets/css/colors/yellow.css">
+  <link rel="stylesheet" href="assets/css/colors/aqua.css">
   <link rel="preload" href="assets/css/fonts/thicccboi.css" as="style" onload="this.rel='stylesheet'">
 </head>
 
 <body>
   <div class="content-wrapper">
-    <header class="wrapper bg-soft-primary">
+    <header class="wrapper bg-white">
       <nav class="navbar navbar-expand-lg center-nav transparent navbar-light">
         <div class="container flex-lg-row flex-nowrap align-items-center">
           <div class="navbar-brand w-100">
             <a href="index.html">
-              <img src="assets/img/logo-dark.png" srcset="./assets/img/logo-dark@2x.png 2x" alt="" />
+              <img src="assets\img\illustrations\AekaRupa-New.jpg" height=60px width=90px alt="" />
             </a>
           </div>
           <div class="navbar-collapse offcanvas-nav">
             <div class="offcanvas-header d-lg-none d-xl-none">
-              <a href="index.html"><img src="assets/img/logo-light.png" srcset="./assets/img/logo-light@2x.png 2x" alt="" /></a>
+              <a href="index.html"><img src="assets\img\illustrations\AekaRupa-New.jpg" height=20px width=30px alt="" /></a>
               <button type="button" class="btn-close btn-close-white offcanvas-close offcanvas-nav-close" aria-label="Close"></button>
             </div>
             <ul class="navbar-nav">
               <li class="nav-item"><a class="nav-link" href="#!">Demos</a>
-                <ul class="dropdown-menu mega-menu mega-menu-dark mega-menu-img">
-                  <li class="mega-menu-content">
-                    <ul class="row row-cols-1 row-cols-lg-6 gx-0 gx-lg-4 gy-lg-2 list-unstyled">
-                      <li class="col"><a class="dropdown-item" href="demo1.html">
-                          <figure class="rounded lift d-none d-lg-block"><img src="assets/img/demos/mi1.jpg" srcset="./assets/img/demos/mi1@2x.jpg 2x" alt=""></figure>
-                          <span class="d-lg-none">Demo I</span>
-                        </a></li>
-                      <li class="col"><a class="dropdown-item" href="demo2.html">
-                          <figure class="rounded lift d-none d-lg-block"><img src="assets/img/demos/mi2.jpg" srcset="./assets/img/demos/mi2@2x.jpg 2x" alt=""></figure>
-                          <span class="d-lg-none">Demo II</span>
-                        </a></li>
-                      <li class="col"><a class="dropdown-item" href="demo3.html">
-                          <figure class="rounded lift d-none d-lg-block"><img src="assets/img/demos/mi3.jpg" srcset="./assets/img/demos/mi3@2x.jpg 2x" alt=""></figure>
-                          <span class="d-lg-none">Demo III</span>
-                        </a></li>
-                      <li class="col"><a class="dropdown-item" href="demo4.html">
-                          <figure class="rounded lift d-none d-lg-block"><img src="assets/img/demos/mi4.jpg" srcset="./assets/img/demos/mi4@2x.jpg 2x" alt=""></figure>
-                          <span class="d-lg-none">Demo IV</span>
-                        </a></li>
-                      <li class="col"><a class="dropdown-item" href="demo5.html">
-                          <figure class="rounded lift d-none d-lg-block"><img src="assets/img/demos/mi5.jpg" srcset="./assets/img/demos/mi5@2x.jpg 2x" alt=""></figure>
-                          <span class="d-lg-none">Demo V</span>
-                        </a></li>
-                      <li class="col"><a class="dropdown-item" href="demo6.html">
-                          <figure class="rounded lift d-none d-lg-block"><img src="assets/img/demos/mi6.jpg" srcset="./assets/img/demos/mi6@2x.jpg 2x" alt=""></figure>
-                          <span class="d-lg-none">Demo VI</span>
-                        </a></li>
-                      <li class="col"><a class="dropdown-item" href="demo7.html">
-                          <figure class="rounded lift d-none d-lg-block"><img src="assets/img/demos/mi7.jpg" srcset="./assets/img/demos/mi7@2x.jpg 2x" alt=""></figure>
-                          <span class="d-lg-none">Demo VII</span>
-                        </a></li>
-                      <li class="col"><a class="dropdown-item" href="demo8.html">
-                          <figure class="rounded lift d-none d-lg-block"><img src="assets/img/demos/mi8.jpg" srcset="./assets/img/demos/mi8@2x.jpg 2x" alt=""></figure>
-                          <span class="d-lg-none">Demo VIII</span>
-                        </a></li>
-                      <li class="col"><a class="dropdown-item" href="demo9.html">
-                          <figure class="rounded lift d-none d-lg-block"><img src="assets/img/demos/mi9.jpg" srcset="./assets/img/demos/mi9@2x.jpg 2x" alt=""></figure>
-                          <span class="d-lg-none">Demo IX</span>
-                        </a></li>
-                      <li class="col"><a class="dropdown-item" href="demo10.html">
-                          <figure class="rounded lift d-none d-lg-block"><img src="assets/img/demos/mi10.jpg" srcset="./assets/img/demos/mi10@2x.jpg 2x" alt=""></figure>
-                          <span class="d-lg-none">Demo X</span>
-                        </a></li>
-                      <li class="col"><a class="dropdown-item" href="demo11.html">
-                          <figure class="rounded lift d-none d-lg-block"><img src="assets/img/demos/mi11.jpg" srcset="./assets/img/demos/mi11@2x.jpg 2x" alt=""></figure>
-                          <span class="d-lg-none">Demo XI</span>
-                        </a></li>
-                      <li class="col"><a class="dropdown-item" href="demo12.html">
-                          <figure class="rounded lift d-none d-lg-block"><img src="assets/img/demos/mi12.jpg" srcset="./assets/img/demos/mi12@2x.jpg 2x" alt=""></figure>
-                          <span class="d-lg-none">Demo XII</span>
-                        </a></li>
-                      <li class="col"><a class="dropdown-item" href="demo13.html">
-                          <figure class="rounded lift d-none d-lg-block"><img src="assets/img/demos/mi13.jpg" srcset="./assets/img/demos/mi13@2x.jpg 2x" alt=""></figure>
-                          <span class="d-lg-none">Demo XIII</span>
-                        </a></li>
-                      <li class="col"><a class="dropdown-item" href="demo14.html">
-                          <figure class="rounded lift d-none d-lg-block"><img src="assets/img/demos/mi14.jpg" srcset="./assets/img/demos/mi14@2x.jpg 2x" alt=""></figure>
-                          <span class="d-lg-none">Demo XIV</span>
-                        </a></li>
-                      <li class="col"><a class="dropdown-item" href="demo15.html">
-                          <figure class="rounded lift d-none d-lg-block"><img src="assets/img/demos/mi15.jpg" srcset="./assets/img/demos/mi15@2x.jpg 2x" alt=""></figure>
-                          <span class="d-lg-none">Demo XV</span>
-                        </a></li>
-                      <li class="col"><a class="dropdown-item" href="demo16.html">
-                          <figure class="rounded lift d-none d-lg-block"><img src="assets/img/demos/mi16.jpg" srcset="./assets/img/demos/mi16@2x.jpg 2x" alt=""></figure>
-                          <span class="d-lg-none">Demo XVI</span>
-                        </a></li>
-                      <li class="col"><a class="dropdown-item" href="demo17.html">
-                          <figure class="rounded lift d-none d-lg-block"><img src="assets/img/demos/mi17.jpg" srcset="./assets/img/demos/mi17@2x.jpg 2x" alt=""></figure>
-                          <span class="d-lg-none">Demo XVII</span>
-                        </a></li>
-                      <li class="col"><a class="dropdown-item" href="demo18.html">
-                          <figure class="rounded lift d-none d-lg-block"><img src="assets/img/demos/mi18.jpg" srcset="./assets/img/demos/mi18@2x.jpg 2x" alt=""></figure>
-                          <span class="d-lg-none">Demo XVIII</span>
-                        </a></li>
-                      <li class="col"><a class="dropdown-item" href="demo19.html">
-                          <figure class="rounded lift d-none d-lg-block"><img src="assets/img/demos/mi19.jpg" srcset="./assets/img/demos/mi19@2x.jpg 2x" alt=""></figure>
-                          <span class="d-lg-none">Demo XIX</span>
-                        </a></li>
-                      <li class="col"><a class="dropdown-item" href="demo20.html">
-                          <figure class="rounded lift d-none d-lg-block"><img src="assets/img/demos/mi20.jpg" srcset="./assets/img/demos/mi20@2x.jpg 2x" alt=""></figure>
-                          <span class="d-lg-none">Demo XX</span>
-                        </a></li>
-                      <li class="col"><a class="dropdown-item" href="demo21.html">
-                          <figure class="rounded lift d-none d-lg-block"><img src="assets/img/demos/mi21.jpg" srcset="./assets/img/demos/mi21@2x.jpg 2x" alt=""></figure>
-                          <span class="d-lg-none">Demo XXI</span>
-                        </a></li>
-                    </ul>
-                    <!--/.row -->
-                  </li>
-                  <!--/.mega-menu-content-->
-                </ul>
-                <!--/.dropdown-menu -->
               </li>
-              <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#!">Pages</a>
-                <ul class="dropdown-menu">
-                  <li class="dropdown"><a class="dropdown-item dropdown-toggle" href="#">Services</a>
-                    <ul class="dropdown-menu">
-                      <li class="nav-item"><a class="dropdown-item" href="services.html">Services I</a></li>
-                      <li class="nav-item"><a class="dropdown-item" href="services2.html">Services II</a></li>
-                    </ul>
-                  </li>
-                  <li class="dropdown"><a class="dropdown-item dropdown-toggle" href="#">About</a>
-                    <ul class="dropdown-menu">
-                      <li class="nav-item"><a class="dropdown-item" href="about.html">About I</a></li>
-                      <li class="nav-item"><a class="dropdown-item" href="about2.html">About II</a></li>
-                    </ul>
-                  </li>
-                  <li class="dropdown"><a class="dropdown-item dropdown-toggle" href="#">Contact</a>
-                    <ul class="dropdown-menu">
-                      <li class="nav-item"><a class="dropdown-item" href="contact.html">Contact I</a></li>
-                      <li class="nav-item"><a class="dropdown-item" href="contact2.html">Contact II</a></li>
-                      <li class="nav-item"><a class="dropdown-item" href="contact3.html">Contact III</a></li>
-                    </ul>
-                  </li>
-                  <li class="nav-item"><a class="dropdown-item" href="pricing.html">Pricing</a></li>
-                  <li class="nav-item"><a class="dropdown-item" href="onepage.html">One Page</a></li>
-                </ul>
+              <li class="nav-item"><a class="nav-link" href="#!">Pages</a>
               </li>
-              <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#!">Projects</a>
-                <ul class="dropdown-menu">
-                  <li class="nav-item"><a class="dropdown-item" href="projects.html">Projects I</a></li>
-                  <li class="nav-item"><a class="dropdown-item" href="projects2.html">Projects II</a></li>
-                  <li class="nav-item"><a class="dropdown-item" href="projects3.html">Projects III</a></li>
-                  <li class="nav-item"><a class="dropdown-item" href="projects4.html">Projects IV</a></li>
-                  <li class="dropdown"><a class="dropdown-item dropdown-toggle" href="#">Single Projects</a>
-                    <ul class="dropdown-menu">
-                      <li class="nav-item"><a class="dropdown-item" href="single-project.html">Single Project I</a></li>
-                      <li class="nav-item"><a class="dropdown-item" href="single-project2.html">Single Project II</a></li>
-                      <li class="nav-item"><a class="dropdown-item" href="single-project3.html">Single Project III</a></li>
-                    </ul>
-                  </li>
-                </ul>
+              <li class="nav-item"><a class="nav-link" href="#!">Projects</a>
               </li>
-              <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#!">Blog</a>
-                <ul class="dropdown-menu">
-                  <li class="nav-item"><a class="dropdown-item" href="blog.html">Blog without Sidebar</a></li>
-                  <li class="nav-item"><a class="dropdown-item" href="blog2.html">Blog with Sidebar</a></li>
-                  <li class="nav-item"><a class="dropdown-item" href="blog3.html">Blog with Left Sidebar</a></li>
-                  <li class="dropdown"><a class="dropdown-item dropdown-toggle" href="#">Blog Posts</a>
-                    <ul class="dropdown-menu">
-                      <li class="nav-item"><a class="dropdown-item" href="blog-post.html">Post without Sidebar</a></li>
-                      <li class="nav-item"><a class="dropdown-item" href="blog-post2.html">Post with Sidebar</a></li>
-                      <li class="nav-item"><a class="dropdown-item" href="blog-post3.html">Post with Left Sidebar</a></li>
-                    </ul>
-                  </li>
-                </ul>
+              <li class="nav-item"><a class="nav-link" href="#!">Blog</a>
               </li>
               <li class="nav-item"><a class="nav-link" href="#!">Blocks</a>
                 <ul class="dropdown-menu mega-menu mega-menu-dark mega-menu-img">
@@ -349,18 +208,7 @@
           <!-- /.navbar-collapse -->
           <div class="navbar-other w-100 d-flex ms-auto">
             <ul class="navbar-nav flex-row align-items-center ms-auto" data-sm-skip="true">
-              <li class="nav-item dropdown language-select text-uppercase">
-                <a class="nav-link dropdown-item dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">En</a>
-                <ul class="dropdown-menu">
-                  <li class="nav-item"><a class="dropdown-item" href="#">En</a></li>
-                  <li class="nav-item"><a class="dropdown-item" href="#">De</a></li>
-                  <li class="nav-item"><a class="dropdown-item" href="#">Es</a></li>
-                </ul>
-              </li>
-              <li class="nav-item"><a class="nav-link" data-toggle="offcanvas-info"><i class="uil uil-info-circle"></i></a></li>
-              <li class="nav-item d-lg-none">
-                <div class="navbar-hamburger"><button class="hamburger animate plain" data-toggle="offcanvas-nav"><span></span></button></div>
-              </li>
+             
             </ul>
             <!-- /.navbar-nav -->
           </div>
@@ -408,17 +256,20 @@
       <!-- /.navbar -->
     </header>
     <!-- /header -->
-    <section class="wrapper bg-gradient-primary">
+    <section class="wrapper bg-white">
       <div class="container pt-10 pt-md-14 pb-8 text-center">
         <div class="row gx-lg-8 gx-xl-12 gy-10 align-items-center">
-          <div class="col-lg-7">
-            <img class="w-auto" src="assets/img/illustrations/i2.png" height="419" width="624"/>
+          <div class="col-lg-2">
+          </div>
+          <div class="col-lg-4">
+            <img class="w-auto" src="assets\istockphoto-1146710375-612x612.jpg" height="300" width="450"/>
           </div>
           <!-- /column -->
-          <div class="col-md-10 offset-md-1 offset-lg-0 col-lg-5 text-center text-lg-start">
-            <h1 class="display-1 mb-5 mx-md-n5 mx-lg-0">Aeka-Rupa.</h1>
-            <p class="lead fs-lg mb-7">We help our clients to increase their website traffic, rankings and visibility in search results.</p>
-            <span><a class="btn btn-primary rounded-pill me-2">Try It For Free</a></span>
+          <div class="col-md-4 offset-md-1 offset-lg-0 col-lg-5 text-center text-lg-start">
+            <h1 class="display-1 mb-5 mx-md-n5 mx-lg-2">AekaRupa</h1>
+            <p class="lead fs-lg mb-7 mx-lg-2">We help our clients to increase their website traffic, rankings and visibility in search results.</p>
+          </div>
+          <div class="col-lg-2">
           </div>
           <!-- /column -->
         </div>
@@ -427,7 +278,7 @@
       <!-- /.container -->
     </section>
     <!-- /section -->
-    <section class="wrapper bg-light">
+    <section class="wrapper bg-white">
       <div class="container pt-14 pt-md-16">
         <div class="row text-center">
           <div class="col-md-10 offset-md-1 col-lg-8 offset-lg-2">
@@ -501,7 +352,7 @@
       <!-- /.container -->
     </section>
     <!-- /section -->
-    <section class="wrapper bg-gradient-reverse-primary">
+    <section class="wrapper bg-white">
       <div class="container py-16 py-md-18">
         <div class="row gx-lg-8 gx-xl-12 gy-10 mb-8 align-items-center">
           <div class="col-lg-7 order-lg-2">
@@ -533,7 +384,7 @@
       <!-- /.container -->
     </section>
     <!-- /section -->
-    <section class="wrapper bg-light angled upper-start lower-start">
+    <section class="wrapper bg-white angled upper-start lower-start">
       <div class="container py-14 pt-md-17 pb-md-15">
         <div class="row gx-md-8 gx-xl-12 gy-10 mb-14 mb-md-18 align-items-center">
           <div class="col-lg-6 order-lg-2">
@@ -655,7 +506,7 @@
       <!-- /.container -->
     </section>
     <!-- /section -->
-    <section class="wrapper bg-gradient-primary">
+    <section class="wrapper bg-white">
       <div class="container py-14 pt-md-16 pb-md-18">
         <div class="position-relative mt-lg-n23 mt-xl-n25">
           <div class="row text-center">
@@ -756,7 +607,7 @@
       <!-- /.container -->
     </section>
     <!-- /section -->
-    <section class="wrapper bg-light">
+    <section class="wrapper bg-white">
       <div class="container">
         <div class="row gx-lg-8 gx-xl-12 gy-10 align-items-center">
           <div class="col-lg-7 order-lg-2">
@@ -792,7 +643,7 @@
       <!-- /.container -->
     </section>
     <!-- /section -->
-    <section class="wrapper bg-gradient-reverse-primary">
+    <section class="wrapper bg-white">
       <div class="container py-14 py-md-18">
         <div class="row gx-lg-8 gx-xl-12 gy-10 align-items-center">
           <div class="col-lg-7">
@@ -886,7 +737,7 @@
       <!-- /.container -->
     </section>
     <!-- /section -->
-    <section class="wrapper bg-light angled upper-end lower-end">
+    <section class="wrapper bg-white angled upper-end lower-end">
       <div class="container py-14 pt-md-14 pb-md-18">
         <div class="row gy-6 mb-14 mb-md-18">
           <div class="col-lg-4">
@@ -902,7 +753,7 @@
               <div class="pricing-switchers">
                 <div class="pricing-switcher pricing-switcher-active"></div>
                 <div class="pricing-switcher"></div>
-                <div class="switcher-button bg-primary"></div>
+                <div class="switcher-button bg-white"></div>
               </div>
               <p class="mb-0 ps-3">Yearly <span class="text-red">(Save 30%)</span></p>
             </div>
