--- a/sandbox.elemisthemes.com/demo1.html
+++ b/sandbox.elemisthemes.com/demo1.html
@@ -33,15 +33,15 @@
               <button type="button" class="btn-close btn-close-white offcanvas-close offcanvas-nav-close" aria-label="Close"></button>
             </div>
             <ul class="navbar-nav">
-              <li class="nav-item"><a class="nav-link" href="#!">Demos</a>
+              <li class="nav-item"><a class="nav-link" href="#!">About Us</a>
               </li>
-              <li class="nav-item"><a class="nav-link" href="#!">Pages</a>
+              <li class="nav-item"><a class="nav-link" href="#!">Portfolio</a>
               </li>
               <li class="nav-item"><a class="nav-link" href="#!">Projects</a>
               </li>
               <li class="nav-item"><a class="nav-link" href="#!">Blog</a>
               </li>
-              <li class="nav-item"><a class="nav-link" href="#!">Blocks</a>
+              <li class="nav-item"><a class="nav-link" href="#!">Testimonials</a>
                 <ul class="dropdown-menu mega-menu mega-menu-dark mega-menu-img">
                   <li class="mega-menu-content">
                     <ul class="row row-cols-1 row-cols-lg-6 gx-0 gx-lg-6 gy-lg-4 list-unstyled">
@@ -137,7 +137,7 @@
                 </ul>
                 <!--/.dropdown-menu -->
               </li>
-              <li class="nav-item"><a class="nav-link" href="docs/index.html">Documentation</a>
+              <li class="nav-item"><a class="nav-link" href="docs/index.html">Contact Us</a>
                 <ul class="dropdown-menu mega-menu">
                   <li class="mega-menu-content">
                     <div class="row gx-0 gx-lg-3">
@@ -267,10 +267,7 @@
           <!-- /column -->
           <div class="col-md-4 offset-md-1 offset-lg-0 col-lg-5 text-center text-lg-start">
             <h1 class="display-1 mb-5 mx-md-n5 mx-lg-2">AekaRupa</h1>
-            <p class="lead fs-lg mb-7 mx-lg-2">We help our clients to increase their website traffic, rankings and visibility in search results.</p>
-          </div>
-          <div class="col-lg-2">
-          </div>
+            <p class=" mb-7 mx-lg-2">An early stage multidisciplinary startup that aims to disrupt the Digital marketing, No-code, Algo-Trading and NFT space. AekaRupa's mission is aligned to provide an equal opportunity and platform to every businesses and freelancers out there to have their technological presence and market visibility.</p>
           <!-- /column -->
         </div>
         <!-- /.row -->
@@ -279,7 +276,7 @@
     </section>
     <!-- /section -->
     <section class="wrapper bg-white">
-      <div class="container pt-14 pt-md-16">
+      <div class="container pt-0 pt-md-0">
         <div class="row text-center">
           <div class="col-md-10 offset-md-1 col-lg-8 offset-lg-2">
             <h2 class="fs-16 text-uppercase text-muted mb-3">What We Do?</h2>
@@ -294,9 +291,9 @@
           <div class="row gx-md-5 gy-5 text-center">
             <div class="col-md-6 col-xl-3">
               <div class="card shadow-lg">
+                <img src="assets/img/NFT_1.jpg" class="card-img-top" alt="" />
                 <div class="card-body">
-                  <img src="assets/img/icons/lineal/search-2.svg" class="svg-inject icon-svg icon-svg-md text-yellow mb-3" alt="" />
-                  <h4>SEO Services</h4>
+                  <h4>NFT </h4>
                   <p class="mb-2">Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus cras justo.</p>
                   <a href="#" class="more hover link-yellow">Learn More</a>
                 </div>
@@ -307,9 +304,9 @@
             <!--/column -->
             <div class="col-md-6 col-xl-3">
               <div class="card shadow-lg">
+                <img src="assets/img/NC_3.jpeg" class="card-img-top" alt="" />
                 <div class="card-body">
-                  <img src="assets/img/icons/lineal/browser.svg" class="svg-inject icon-svg icon-svg-md text-red mb-3" alt="" />
-                  <h4>Web Design</h4>
+                  <h4>No-Code</h4>
                   <p class="mb-2">Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus cras justo.</p>
                   <a href="#" class="more hover link-red">Learn More</a>
                 </div>
@@ -320,9 +317,9 @@
             <!--/column -->
             <div class="col-md-6 col-xl-3">
               <div class="card shadow-lg">
+                <img src="assets/img/DM_2.jpg" class="card-img-top" alt="" />
                 <div class="card-body">
-                  <img src="assets/img/icons/lineal/chat-2.svg" class="svg-inject icon-svg icon-svg-md text-green mb-3" alt="" />
-                  <h4>Social Engagement</h4>
+                  <h4>Digital Media Marketing</h4>
                   <p class="mb-2">Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus cras justo.</p>
                   <a href="#" class="more hover link-green">Learn More</a>
                 </div>
@@ -333,9 +330,9 @@
             <!--/column -->
             <div class="col-md-6 col-xl-3">
               <div class="card shadow-lg">
+                <img src="assets/img/AT_2.jpg" class="card-img-top" alt="" />
                 <div class="card-body">
-                  <img src="assets/img/icons/lineal/megaphone.svg" class="svg-inject icon-svg icon-svg-md text-blue mb-3" alt="" />
-                  <h4>Content Marketing</h4>
+                  <h4>Algo Trading</h4>
                   <p class="mb-2">Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus cras justo.</p>
                   <a href="#" class="more hover link-blue">Learn More</a>
                 </div>
