Resized Images in cards

--- a/sandbox.elemisthemes.com/demo1.html
+++ b/sandbox.elemisthemes.com/demo1.html
@@ -291,7 +291,7 @@
           <div class="row gx-md-5 gy-5 text-center">
             <div class="col-md-6 col-xl-3">
               <div class="card shadow-lg">
-                <img src="assets/img/NFT_1.jpg" class="card-img-top" alt="" />
+                <img src="assets/img/NFT_32.webp" height="155" class="card-img-top" alt="" />
                 <div class="card-body">
                   <h4>NFT </h4>
                   <p class="mb-2">Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus cras justo.</p>
@@ -304,10 +304,10 @@
             <!--/column -->
             <div class="col-md-6 col-xl-3">
               <div class="card shadow-lg">
-                <img src="assets/img/NC_3.jpeg" class="card-img-top" alt="" />
+                <img src="assets/img/NC_17.jpeg" class="card-img-top" alt="" />
                 <div class="card-body">
                   <h4>No-Code</h4>
-                  <p class="mb-2">Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus cras justo.</p>
+                  <p class="mb-2">Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus cras justo</p>
                   <a href="#" class="more hover link-red">Learn More</a>
                 </div>
                 <!--/.card-body -->
@@ -317,10 +317,10 @@
             <!--/column -->
             <div class="col-md-6 col-xl-3">
               <div class="card shadow-lg">
-                <img src="assets/img/DM_2.jpg" class="card-img-top" alt="" />
+                <img src="assets/img/DM_13.jpg" class="card-img-top" alt="" />
                 <div class="card-body">
                   <h4>Digital Media Marketing</h4>
-                  <p class="mb-2">Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus cras justo.</p>
+                  <p class="mb-2">Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus cras justo</p>
                   <a href="#" class="more hover link-green">Learn More</a>
                 </div>
                 <!--/.card-body -->
@@ -330,10 +330,10 @@
             <!--/column -->
             <div class="col-md-6 col-xl-3">
               <div class="card shadow-lg">
-                <img src="assets/img/AT_2.jpg" class="card-img-top" alt="" />
+                <img src="assets/img/AT_20.jpg" height="154" class="card-img-top" alt="" />
                 <div class="card-body">
                   <h4>Algo Trading</h4>
-                  <p class="mb-2">Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus cras justo.</p>
+                  <p class="mb-2">Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus cras justos</p>
                   <a href="#" class="more hover link-blue">Learn More</a>
                 </div>
                 <!--/.card-body -->
