--- a/sandbox.elemisthemes.com/demo1.html
+++ b/sandbox.elemisthemes.com/demo1.html
@@ -304,9 +304,9 @@
             <!--/column -->
             <div class="col-md-6 col-xl-3">
               <div class="card shadow-lg">
-                <img src="assets/img/NC_17.jpeg" class="card-img-top" alt="" />
+                <img src="assets/img/Merch2.jpg" class="card-img-top" alt="" />
                 <div class="card-body">
-                  <h4>No-Code</h4>
+                  <h4>Bulk Merchandise</h4>
                   <p class="mb-2">Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus cras justo</p>
                   <a href="#" class="more hover link-red">Learn More</a>
                 </div>
@@ -320,6 +320,67 @@
                 <img src="assets/img/DM_13.jpg" class="card-img-top" alt="" />
                 <div class="card-body">
                   <h4>Digital Media Marketing</h4>
+                  <p class="mb-2">Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus cras justo</p>
+                  <a href="#" class="more hover link-green">Learn More</a>
+                </div>
+                <!--/.card-body -->
+              </div>
+              <!--/.card -->
+            </div>
+            <!--/column -->
+            <div class="col-md-6 col-xl-3">
+              <div class="card shadow-lg">
+                <img src="assets/img/Eventmanagement4.jpg" height="154" class="card-img-top" alt="" />
+                <div class="card-body">
+                  <h4>Event-Management</h4>
+                  <p class="mb-2">Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus cras justos</p>
+                  <a href="#" class="more hover link-blue">Learn More</a>
+                </div>
+                <!--/.card-body -->
+              </div>
+              <!--/.card -->
+            </div>
+            <!--/column -->
+          </div>
+          <!--/.row -->
+        </div>
+
+        <!-- /.row -->
+        <div class="position-relative">
+          <div class="shape rounded-circle bg-soft-blue rellax w-16 h-16" data-rellax-speed="1" style="bottom: -0.5rem; right: -2.2rem; z-index: 0;"></div>
+          <div class="shape bg-dot primary rellax w-16 h-17" data-rellax-speed="1" style="top: -0.5rem; left: -2.5rem; z-index: 0;"></div>
+          <div class="row gx-md-5 gy-5 text-center">
+            <div class="col-md-6 col-xl-3">
+              <div class="card shadow-lg">
+                <img src="assets/img/gamedev2.png" height="155" class="card-img-top" alt="" />
+                <div class="card-body">
+                  <h4>Game Dev </h4>
+                  <p class="mb-2">Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus cras justo.</p>
+                  <a href="#" class="more hover link-yellow">Learn More</a>
+                </div>
+                <!--/.card-body -->
+              </div>
+              <!--/.card -->
+            </div>
+            <!--/column -->
+            <div class="col-md-6 col-xl-3">
+              <div class="card shadow-lg">
+                <img src="assets/img/NC_17.jpeg" class="card-img-top" alt="" />
+                <div class="card-body">
+                  <h4>No-Code</h4>
+                  <p class="mb-2">Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus cras justo</p>
+                  <a href="#" class="more hover link-red">Learn More</a>
+                </div>
+                <!--/.card-body -->
+              </div>
+              <!--/.card -->
+            </div>
+            <!--/column -->
+            <div class="col-md-6 col-xl-3">
+              <div class="card shadow-lg">
+                <img src="assets/img/VlSI7.webp" height="155" class="card-img-top" alt="" />
+                <div class="card-body">
+                  <h4>VLSI</h4>
                   <p class="mb-2">Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus cras justo</p>
                   <a href="#" class="more hover link-green">Learn More</a>
                 </div>
@@ -344,6 +405,8 @@
           </div>
           <!--/.row -->
         </div>
+
+
         <!-- /.position-relative -->
       </div>
       <!-- /.container -->
