Added Final touches

--- a/sandbox.elemisthemes.com/demo1.html
+++ b/sandbox.elemisthemes.com/demo1.html
@@ -35,13 +35,8 @@
             <ul class="navbar-nav">
               <li class="nav-item"><a class="nav-link" href="#!">About Us</a>
               </li>
-              <li class="nav-item"><a class="nav-link" href="#!">Portfolio</a>
+              <li class="nav-item"><a class="nav-link" href="#Portfolio">Portfolio</a>
               </li>
-              <li class="nav-item"><a class="nav-link" href="#!">Projects</a>
-              </li>
-              <li class="nav-item"><a class="nav-link" href="#!">Blog</a>
-              </li>
-              <li class="nav-item"><a class="nav-link" href="#!">Testimonials</a>
                 <ul class="dropdown-menu mega-menu mega-menu-dark mega-menu-img">
                   <li class="mega-menu-content">
                     <ul class="row row-cols-1 row-cols-lg-6 gx-0 gx-lg-6 gy-lg-4 list-unstyled">
@@ -137,7 +132,7 @@
                 </ul>
                 <!--/.dropdown-menu -->
               </li>
-              <li class="nav-item"><a class="nav-link" href="docs/index.html">Contact Us</a>
+              <li class="nav-item"><a class="nav-link" href="#ContactUs">Contact Us</a>
                 <ul class="dropdown-menu mega-menu">
                   <li class="mega-menu-content">
                     <div class="row gx-0 gx-lg-3">
@@ -262,12 +257,11 @@
           <div class="col-lg-2">
           </div>
           <div class="col-lg-4">
-            <img class="w-auto" src="assets\istockphoto-1146710375-612x612.jpg" height="300" width="450"/>
+            <img class="w-auto" src="assets\img\illustrations\AekaRupa-New.jpg" height="300" width="450"/>
           </div>
           <!-- /column -->
-          <div class="col-md-4 offset-md-1 offset-lg-0 col-lg-5 text-center text-lg-start">
-            <h1 class="display-1 mb-5 mx-md-n5 mx-lg-2">AekaRupa</h1>
-            <p class=" mb-7 mx-lg-2">An early stage multidisciplinary startup that aims to disrupt the Digital marketing, No-code, Algo-Trading and NFT space. AekaRupa's mission is aligned to provide an equal opportunity and platform to every businesses and freelancers out there to have their technological presence and market visibility.</p>
+          <div class="col-md-4 offset-md-1 offset-lg-0.5 col-lg-5 text-center text-lg-start">
+            <p id="AboutUs" class=" mb-7 mx-lg-2">An early stage multidisciplinary startup that aims to disrupt the Digital marketing, No-code, Algo-Trading and NFT space. AekaRupa's mission is aligned to provide an equal opportunity and platform to every businesses and freelancers out there to have their technological presence and market visibility.</p>
           <!-- /column -->
         </div>
         <!-- /.row -->
@@ -279,7 +273,7 @@
       <div class="container pt-0 pt-md-0">
         <div class="row text-center">
           <div class="col-md-10 offset-md-1 col-lg-8 offset-lg-2">
-            <h2 class="fs-16 text-uppercase text-muted mb-3">What We Do?</h2>
+            <h2 id="Portfolio" class="fs-16 text-uppercase text-muted mb-3">What We Do?</h2>
             <h3 class="display-4 mb-10 px-xl-10">The service we offer is specifically designed to meet your needs.</h3>
           </div>
           <!-- /column -->
@@ -415,108 +409,13 @@
       </div>
       <!-- /.container -->
     </section>
-    <!-- /section -->
-    <section class="wrapper bg-white">
-      <div class="container py-14 py-md-18">
-        <div class="row gx-lg-8 gx-xl-12 gy-10 align-items-center">
-          <div class="col-lg-7">
-            <div class="row gx-md-5 gy-5">
-              <div class="col-md-6 col-xl-5 align-self-end">
-                <div class="card shadow-lg">
-                  <div class="card-body">
-                    <blockquote class="icon mb-0">
-                      <p>“Cum sociis natoque penatibus et magnis dis parturient montes.”</p>
-                      <div class="blockquote-details">
-                        <div class="info p-0">
-                          <h5 class="mb-1">Coriss Ambady</h5>
-                          <p class="mb-0">Financial Analyst</p>
-                        </div>
-                      </div>
-                    </blockquote>
-                  </div>
-                  <!--/.card-body -->
-                </div>
-                <!--/.card -->
-              </div>
-              <!--/column -->
-              <div class="col-md-6 align-self-end">
-                <div class="card shadow-lg">
-                  <div class="card-body">
-                    <blockquote class="icon mb-0">
-                      <p>“Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Vestibulum id ligula porta felis euismod.”</p>
-                      <div class="blockquote-details">
-                        <div class="info p-0">
-                          <h5 class="mb-1">Cory Zamora</h5>
-                          <p class="mb-0">Marketing Specialist</p>
-                        </div>
-                      </div>
-                    </blockquote>
-                  </div>
-                  <!--/.card-body -->
-                </div>
-                <!--/.card -->
-              </div>
-              <!--/column -->
-              <div class="col-md-6 col-xl-5 offset-xl-1">
-                <div class="card shadow-lg">
-                  <div class="card-body">
-                    <blockquote class="icon mb-0">
-                      <p>“Donec id elit non porta gravida at eget metus. Duis mollis est luctus commodo nisi erat.”</p>
-                      <div class="blockquote-details">
-                        <div class="info p-0">
-                          <h5 class="mb-1">Barclay Widerski</h5>
-                          <p class="mb-0">Sales Specialist</p>
-                        </div>
-                      </div>
-                    </blockquote>
-                  </div>
-                  <!--/.card-body -->
-                </div>
-                <!--/.card -->
-              </div>
-              <!--/column -->
-              <div class="col-md-6 align-self-start">
-                <div class="card shadow-lg">
-                  <div class="card-body">
-                    <blockquote class="icon mb-0">
-                      <p>“Nisi erat porttitor ligula, eget lacinia odio sem nec elit. Aenean eu leo pellentesque.”</p>
-                      <div class="blockquote-details">
-                        <div class="info p-0">
-                          <h5 class="mb-1">Jackie Sanders</h5>
-                          <p class="mb-0">Investment Planner</p>
-                        </div>
-                      </div>
-                    </blockquote>
-                  </div>
-                  <!--/.card-body -->
-                </div>
-                <!--/.card -->
-              </div>
-              <!--/column -->
-            </div>
-            <!--/.row -->
-          </div>
-          <!--/column -->
-          <div class="col-lg-5">
-            <h2 class="fs-16 text-uppercase text-muted mb-3 mt-lg-n6">Our Community</h2>
-            <h3 class="display-4 mb-5">Don't take our word for it. See what customers are saying about us.</h3>
-            <p>Aenean lacinia bibendum nulla sed consectetur. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Nulla vitae elit libero, a pharetra augue. Maecenas faucibus mollis interdum. Vestibulum id ligula porta felis euismod.</p>
-            <a href="#" class="btn btn-primary rounded-pill mt-3">All Testimonials</a>
-          </div>
-          <!--/column -->
-        </div>
-        <!--/.row -->
-      </div>
-      <!-- /.container -->
-    </section>
 
   </div>
   <!-- /.content-wrapper -->
   <footer class="bg-navy text-inverse">
     <div class="container pt-15 pt-md-17 pb-13 pb-md-15">
       <div class="d-lg-flex flex-row align-items-lg-center">
-        <h3 class="display-4 mb-6 mb-lg-0 pe-lg-20 pe-xl-22 pe-xxl-25 text-white">Join our community by using our services and grow your business.</h3>
-        <a href="#" class="btn btn-primary rounded-pill mb-0 text-nowrap">Try It For Free</a>
+        <h3 id="ContactUs" class="display-4 mb-6 mb-lg-0 pe-lg-20 pe-xl-22 pe-xxl-25 text-white">Join our community by using our services and grow your business.</h3>
       </div>
       <!--/div -->
       <hr class="mt-11 mb-12" />
@@ -524,7 +423,7 @@
         <div class="col-md-4 col-lg-3">
           <div class="widget">
             <img class="mb-4" src="assets/img/logo-light.png" srcset="./assets/img/logo-light@2x.png 2x" alt="" />
-            <p class="mb-4">© 2021 Sandbox. <br class="d-none d-lg-block" />All rights reserved.</p>
+            <p class="mb-4">© 2022 AekaRupa. <br class="d-none d-lg-block" />All rights reserved.</p>
             <nav class="nav social social-white">
               <a href="#"><i class="uil uil-twitter"></i></a>
               <a href="#"><i class="uil uil-facebook-f"></i></a>
@@ -540,8 +439,8 @@
         <div class="col-md-4 col-lg-3">
           <div class="widget">
             <h4 class="widget-title text-white mb-3">Get in Touch</h4>
-            <address class="pe-xl-15 pe-xxl-17">Moonshine St. 14/05 Light City, London, United Kingdom</address>
-            <a href="cdn-cgi/l/email-protection.html#6a49"><span class="__cf_email__" data-cfemail="375e59515877525a565e5b1954585a">[email&#160;protected]</span></a><br /> +00 (123) 456 78 90
+            <address class="pe-xl-15 pe-xxl-17">J4, Varadharajapuram, Mudichur, Chennai - 600048</address>
+            <a href="cdn-cgi/l/email-protection.html#6a49"><span class="__cf_email__" data-cfemail="375e59515877525a565e5b1954585a">aekarupa.info@gmail.com</span></a><br /> +91 7305087237
           </div>
           <!-- /.widget -->
         </div>
@@ -550,7 +449,7 @@
           <div class="widget">
             <h4 class="widget-title text-white mb-3">Learn More</h4>
             <ul class="list-unstyled  mb-0">
-              <li><a href="#">About Us</a></li>
+              <li><a href="#AboutUs">About Us</a></li>
               <li><a href="#">Our Story</a></li>
               <li><a href="#">Projects</a></li>
               <li><a href="#">Terms of Use</a></li>
@@ -562,30 +461,14 @@
         <!-- /column -->
         <div class="col-md-12 col-lg-3">
           <div class="widget">
-            <h4 class="widget-title text-white mb-3">Our Newsletter</h4>
-            <p class="mb-5">Subscribe to our newsletter to get our news & deals delivered to you.</p>
-            <div class="newsletter-wrapper">
-              <!-- Begin Mailchimp Signup Form -->
-              <div id="mc_embed_signup2">
-                <form action="https://elemisfreebies.us20.list-manage.com/subscribe/post?u=aa4947f70a475ce162057838d&amp;id=b49ef47a9a" method="post" id="mc-embedded-subscribe-form2" name="mc-embedded-subscribe-form" class="validate dark-fields" target="_blank" novalidate>
-                  <div id="mc_embed_signup_scroll2">
-                    <div class="mc-field-group input-group form-floating">
-                      <input type="email" value="" name="EMAIL" class="required email form-control" placeholder="Email Address" id="mce-EMAIL2">
-                      <label for="mce-EMAIL2">Email Address</label>
-                      <input type="submit" value="Join" name="subscribe" id="mc-embedded-subscribe2" class="btn btn-primary ">
-                    </div>
-                    <div id="mce-responses2" class="clear">
-                      <div class="response" id="mce-error-response2" style="display:none"></div>
-                      <div class="response" id="mce-success-response2" style="display:none"></div>
-                    </div> <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_ddc180777a163e0f9f66ee014_4b1bcfa0bc" tabindex="-1" value=""></div>
-                    <div class="clear"></div>
-                  </div>
-                </form>
-              </div>
-              <!--End mc_embed_signup-->
-            </div>
-            <!-- /.newsletter-wrapper -->
+            <h4 class="widget-title text-white mb-3">Our Presence</h4>
+            <ul class="list-unstyled  mb-0">
+            <li >Hyderabad</li>
+            <li >Chennai</li>
+            <li >Bangalore</li>
+            <li >Erode</li>
+            <li >Trichy</li>
+          </ul>
           </div>
           <!-- /.widget -->
         </div>
