--- a/sandbox.elemisthemes.com/demo1.html
+++ b/sandbox.elemisthemes.com/demo1.html
@@ -440,7 +440,7 @@
           <div class="widget">
             <h4 class="widget-title text-white mb-3">Get in Touch</h4>
             <address class="pe-xl-15 pe-xxl-17">J4, Varadharajapuram, Mudichur, Chennai - 600048</address>
-            <a href="cdn-cgi/l/email-protection.html#6a49"><span class="__cf_email__" data-cfemail="375e59515877525a565e5b1954585a">aekarupa.info@gmail.com</span></a><br /> +91 7305087237
+            <a><span >aekarupa.info@gmail.com</span></a><br /> +91 7305087237
           </div>
           <!-- /.widget -->
         </div>
