--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <meta name="description" content="An impressive and flawless site template that includes various UI elements and countless features, attractive ready-made blocks and rich pages, basically everything you need to create a unique and professional website.">
   <meta name="keywords" content="bootstrap 5, business, corporate, creative, gulp, marketing, minimal, modern, multipurpose, one page, responsive, saas, sass, seo, startup">
   <meta name="author" content="elemis">
-  <title>Sandbox - Modern & Multipurpose Bootstrap 5 Template</title>
-  <link rel="shortcut icon" href="assets/img/favicon.png">
+  <title>AekaRupa</title>
+  <link rel="shortcut icon" href="assets/img/AR_transparent.png">
   <link rel="stylesheet" href="assets/css/plugins.css">
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="assets/css/colors/aqua.css">
@@ -23,9 +23,7 @@
       <nav class="navbar navbar-expand-lg center-nav transparent navbar-light">
         <div class="container flex-lg-row flex-nowrap align-items-center">
           <div class="navbar-brand w-100">
-            <a href="index.html">
-              <img src="assets\img\illustrations\AekaRupa-New.jpg" height=60px width=90px alt="" />
-            </a>
+            
           </div>
           <div class="navbar-collapse offcanvas-nav">
             <div class="offcanvas-header d-lg-none d-xl-none">
@@ -439,8 +437,8 @@
         <div class="col-md-4 col-lg-3">
           <div class="widget">
             <h4 class="widget-title text-white mb-3">Get in Touch</h4>
-            <address class="pe-xl-15 pe-xxl-17">J4, Varadharajapuram, Mudichur, Chennai - 600048</address>
-            <a><span >aekarupa.info@gmail.com</span></a><br /> +91 7305087237
+            <p class="pe-xl-15 pe-xxl-17">Varadharajapuram,<br> Mudichur, <br>Chennai - 600048</p>
+            <a><span >team@aekarupa.com</span></a><br /> +91 7305087237
           </div>
           <!-- /.widget -->
         </div>
