--- a/index.html
+++ b/index.html
@@ -464,6 +464,7 @@
             <li >Hyderabad</li>
             <li >Chennai</li>
             <li >Bangalore</li>
+            <li >Coimbatore</li>
             <li >Erode</li>
             <li >Trichy</li>
           </ul>
